@@ -65,6 +65,10 @@
 <td align="center" width="33%"><a href="../manual/R-FAQ.html">Frequently Asked Questions</a> </td>
 <td align="center" width="33%"><a href="../THANKS">Thanks</a> </td>
 </tr>
+<tr>
+<td></td>
+<td align="center" width="33%"><a href="../../NEWS">NEWS</a></td>
+</tr>
 </table>
 
 </body>
