@@ -2,7 +2,7 @@ include ../MkRules
 
 R_HOME = ../../..
 
-all: profiles fixhtml fixbin fixetc svnonly
+all: profiles fixhtml fixbin fixetc fixdoc svnonly
 
 profiles: $(R_HOME)/library/base/R/Rprofile
 
@@ -30,7 +30,11 @@ fixhtml:  html/rwin.html
 fixetc: $(wildcard ./etc/*)
 	$(CP) -p $^ $(R_HOME)/etc
 	@$(ECHO) done > fixetc
-
+	
+fixdoc: $(wildcard ../CHANGES*)
+	$(CP) -p $^ $(R_HOME)/doc
+	@$(ECHO) done > fixhtml
+	
 svnonly:
 	@$(MAKE) -C ../../../doc/manual -f Makefile.win svnonly
 
