@@ -138,9 +138,9 @@ nls_iter(SEXP m, SEXP control, SEXP doTraceArg)
 
 #define NON_CONV_FINIS_1(_ID_, _MSG_, _A1_)	\
     if(warnOnly) {				\
-	char msgbuf[70];			\
+	char msgbuf[1000];			\
 	warning(_MSG_, _A1_);			\
-	sprintf(msgbuf, _MSG_, _A1_);		\
+	snprintf(msgbuf, 1000, _MSG_, _A1_);	\
 	return CONV_INFO_MSG(msgbuf, _ID_);	\
     }						\
     else					\
@@ -148,9 +148,9 @@ nls_iter(SEXP m, SEXP control, SEXP doTraceArg)
 
 #define NON_CONV_FINIS_2(_ID_, _MSG_, _A1_, _A2_)	\
     if(warnOnly) {					\
-	char msgbuf[70];				\
+	char msgbuf[1000];				\
 	warning(_MSG_, _A1_, _A2_);			\
-	sprintf(msgbuf, _MSG_, _A1_, _A2_);		\
+	snprintf(msgbuf, 1000, _MSG_, _A1_, _A2_);	\
 	return CONV_INFO_MSG(msgbuf, _ID_);		\
     }							\
     else						\
